<resources>
    <string name="app_name">Salvatore</string>
    <string name="loginButton">LOGIN</string>
    <string name="registerButton">REGISTRATI</string>
    <string name="login_email">fedescaltro99@gmail.com</string><!--E-mail-->
    <string name="login_pswd">22052010</string><!--Password-->
    <string name="conferma_login">Entra</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="automobilista_text">Automobilista</string>
    <string name="distributore_text">Distributore</string>

    <string name="signInText">Sei nuovo nell\'app? Iscriviti</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Impostazioni</string>

    <string name="hintPassword">Password</string>
    <string name="hintDob">Data di nascita</string>
    <string name="hintGender">Sono </string>
    <string name="male">Uomo</string>
    <string name="female">Donna</string>
    <string name="btnSignUp">REGISTRATI</string>
    <string name="hintAddress">Sede (Via Civico, Città)</string>
    <string name="title_activity_settings_automobilista">Impostazioni</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Generali</string>

    <!--<string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>-->
    <string name="notificationChannelName">Notification Channel Name</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minuti</item>
        <item>30 minuti</item>
        <item>1 ora</item>
        <item>3 ore</item>
        <item>6 ore</item>
        <item>Mai</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Benzina</item>
        <item>GPL</item>
        <item>Diesel</item>
        <item>Metano</item>
        <item>Elettricità</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifiche</string>

    <string name="pref_title_new_message_notifications">Notifiche nuovi messaggi</string>

    <string name="pref_title_ringtone">Suoneria</string>
    <string name="pref_ringtone_silent">Silenzioso</string>

    <string name="pref_title_vibrate">Vibrazione</string>
    <string name="title_activity_maps">Map</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pref_title_display_fuel">Seleziona il carburante preferito</string>
    <string-array name="pref_dispenser_fuel">
        <item>Benzina</item>
        <item>GPL</item>
        <item>Diesel</item>
        <item>Metano</item>
        <item>Elettricità</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
        <item>-3</item>
    </string-array>

    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel description</string>

    <string name="filters">Filtri</string>

</resources>