<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constraintRegisterDistributore"
    android:layout_height="match_parent"
    tools:context="com.gibbo.salvatore.RegisterDistributoreActivity"
    ><!--android:background="@drawable/background_login"-->

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="262dp"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/logo_british"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="372dp"
        android:layout_height="545dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView"
        card_view:cardBackgroundColor="#96ffffff"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="518dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoView"
            app:layout_constraintVertical_bias="0.0">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_edittext">

                <EditText
                    android:id="@+id/signupNameD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Nome"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_edittext">

                <EditText
                    android:id="@+id/signupEmailD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_edittext">

                <EditText
                    android:id="@+id/signupPsswdD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_input_layout_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_edittext">

                <EditText
                    android:id="@+id/signupAddressD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintAddress"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:paddingTop="20dp">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="1dp"
                    android:text="Erogo "
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/benzaPrice"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="-17dp"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/dieselPrice"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/checkDiesel"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/gplPrice"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/benzaPrice"
                    android:layout_below="@+id/checkDiesel"
                    android:layout_marginTop="-11dp"
                    android:inputType="numberDecimal"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/elettricitàPrice"
                    android:layout_width="67dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/benzaPrice"
                    android:layout_marginBottom="57dp"
                    android:inputType="numberDecimal"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/metanoPrice"
                    android:layout_width="67dp"
                    android:layout_height="40dp"
                    android:layout_alignStart="@+id/benzaPrice"
                    android:layout_below="@+id/gplPrice"
                    android:layout_marginTop="-2dp"
                    android:inputType="numberDecimal"
                    tools:ignore="RtlCompat"
                    />

                <CheckBox
                    android:id="@+id/checkBenza"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/textView2"
                    android:layout_alignBottom="@+id/textView2"
                    android:layout_marginLeft="27dp"
                    android:layout_marginStart="27dp"
                    android:layout_toEndOf="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:text="Benzina" />

                <CheckBox
                    android:id="@+id/checkDiesel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/checkBenza"
                    android:layout_alignStart="@+id/checkBenza"
                    android:layout_below="@+id/checkBenza"
                    android:text="Gasolio / Diesel" />

                <CheckBox
                    android:id="@+id/checkGPL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/checkDiesel"
                    android:layout_alignStart="@+id/checkDiesel"
                    android:layout_below="@+id/checkDiesel"
                    android:text="GPL" />

                <CheckBox
                    android:id="@+id/checkMetano"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/checkGPL"
                    android:layout_alignStart="@+id/checkGPL"
                    android:layout_below="@+id/checkGPL"
                    android:text="Metano" />

                <CheckBox
                    android:id="@+id/checkElettrico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/checkBenza"
                    android:layout_below="@+id/checkMetano"
                    android:text="Elettricità"
                    android:layout_alignLeft="@+id/checkBenza" />


                <Button
                    android:id="@+id/regDistributore"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/roundbutton"
                    android:text="@string/btnSignUp"
                    android:textColor="@android:color/white" />
            </RelativeLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
